Bug 1689509 - Use a better visible tree-line color for default Mac theme. r=aleca a=wsmwk

--- a/mail/themes/osx/mail/messenger.css
+++ b/mail/themes/osx/mail/messenger.css
@@ -487,6 +487,14 @@ treechildren::-moz-tree-cell-text {
   padding-inline-start: 2px;
 }
 
+treechildren::-moz-tree-line {
+  border-color: inherit;
+}
+
+treechildren::-moz-tree-line(selected, focus) {
+  border-color: HighlightText;
+}
+
 /* message column icons */
 
 .treecol-sortdirection {
